wp_contextual/tests/error_unexpected_wp_context_punct.rs
use wp_contextual::WPContextual;

#[derive(WPContextual)]
pub struct SparseFoo {
    #[WPContext(edit. view)]
    pub bar: Option<u32>,
}

fn main() {}

uniffi::setup_scaffolding!();
